--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Truckio</title>
   </head>
   <body>
+    <h1> Hello World</h1>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
